fix unexpected horizontal scrollbar
https://www.dvdheiden.nl/en/2013/12/04/bootstrap-3-row-class-causes-hori
zontal-scrollbar/

--- a/static/style.css
+++ b/static/style.css
@@ -18,4 +18,6 @@ body {
 
 form {
 	margin-bottom: 40px;
+	padding-left: 15px;
+	padding-right: 15px;
 }
